--- a/flex/05-flex-modal/solution/solution.html
+++ b/flex/05-flex-modal/solution/solution.html
@@ -13,7 +13,8 @@
       <!-- additional container used here -->
       <div class="container">
         <!-- header div was moved to encompass the close button as well -->
-        <div class="header">Are you sure you want to do that?
+        <div class="header">
+          Are you sure you want to do that?
           <button class="close-button">✖</button>
         </div>
         <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur excepturi id soluta, numquam minima rerum doloremque eveniet aspernatur beatae commodi. Cupiditate recusandae ad repellendus quidem consectetur sequi amet aspernatur cumque!</div>
